:wrench: Fix z-index bug

--- a/Projects/Memory Game/style.css
+++ b/Projects/Memory Game/style.css
@@ -61,6 +61,7 @@ img {
   width: 400px;
   height: 400px;
 	z-index: -1;
+	background-size: cover;
 	background-image: url('images/background.jpg');
 	background-repeat: no-repeat;
 }
@@ -88,6 +89,7 @@ p {
 }
 
 h1 {
+	z-index: 1;
 	margin: 0;
 	font-size: 20px;
 	position: absolute;
